criação conteudo páginas

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 <body>
 
     <div> 
-        <nav> 
+        <header> <!-- Cabeçalho -->
+            <h1> Página Home </h1> 
+                <nav> 
+                    <ul> 
+                        <a href="mobile.html"> <li> Mobile </li></a>
+                        <a href="games.html"> <li> Games </li></a>
+                    </ul>
+                </nav>
+        </header>
 
+        <section> <!-- Conteeúdo -->
+            <h2> Sobre: </h2>
+                <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos 
+                    quaerat deleniti dolor nisi quidem aspernatur, eius dolorem! Eius iste 
+                    error tenetur nihil, omnis voluptatibus? Totam quam molestias officia 
+                    numquam hic.    </p>
 
-        </nav>
+        </section>
+
+        <footer> <!-- Rodapé -->
+            <p> Feito por Mari <3 </p>
+            </footer> 
+
     </div>
 
     
