criação conteudos páginas

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title> Página Inicial </title>
 </head>
 <body>
 
     <div> 
         <header> <!-- Cabeçalho -->
-            <h1> Página Home </h1> 
+            <h1> Página Games </h1> 
                 <nav> 
                     <ul> 
                         <a href="mobile.html"> <li> Mobile </li></a>
-                        <a href="games.html"> <li> Games </li></a>
+                        <a href="games.html"> <li> Home </li></a>
                     </ul>
                 </nav>
         </header>
@@ -29,10 +29,8 @@
 
         <footer> <!-- Rodapé -->
             <p> Feito por Mari <3 </p>
-            </footer> 
-
+        </footer>
     </div>
-
     
 </body>
 </html>
