--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div> 
         <header> <!-- Cabeçalho -->
-            <h1> Página Games </h1> 
+            <h1> Página Home </h1> 
                 <nav> 
                     <ul> 
                         <a href="mobile.html"> <li> Mobile </li></a>
