adição de imagem + conteudo games

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <nav> 
                     <ul> 
                         <a href="mobile.html"> <li> Mobile </li></a>
-                        <a href="games.html"> <li> Home </li></a>
+                        <a href="games.html"> <li> Games </li></a>
                     </ul>
                 </nav>
         </header>
